--- a/typer.html
+++ b/typer.html
@@ -16,6 +16,8 @@
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <script async src="https://kit.fontawesome.com/a1c4b21e48.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/fpsmeter/0.3.1/fpsmeter.min.js"></script>
+  <script defer src="https://berkerol.github.io/libraries/canvas.js"></script>
+  <script defer src="https://berkerol.github.io/libraries/particle.js"></script>
   <script defer src="typer.js"></script>
 </head>
 
